parser.output
Terminals unused in grammar

   CASE
   DEFAULT
   SWITCH
   LBRACKET
   RBRACKET
   COLON
   QUESTION


Grammar

    0 $accept: program $end

    1 program: MAIN LPAREN RPAREN compound_statement

    2 primary_expression: identifier
    3                   | constant_val
    4                   | LPAREN expression RPAREN

    5 postfix_expression: primary_expression
    6                   | postfix_expression INC_OP
    7                   | postfix_expression DEC_OP

    8 unary_expression: postfix_expression
    9                 | INC_OP postfix_expression
   10                 | DEC_OP postfix_expression
   11                 | ADD postfix_expression
   12                 | SUB postfix_expression
   13                 | TLIDE postfix_expression
   14                 | NOT postfix_expression

   15 multipy_expression: unary_expression
   16                   | multipy_expression MUL unary_expression
   17                   | multipy_expression DIV unary_expression
   18                   | multipy_expression MOD unary_expression

   19 additive_expression: multipy_expression
   20                    | additive_expression ADD multipy_expression
   21                    | additive_expression SUB multipy_expression

   22 shift_expression: additive_expression
   23                 | shift_expression LEFT_OP additive_expression
   24                 | shift_expression RIGHT_OP additive_expression

   25 relation_expression: shift_expression
   26                    | relation_expression GT shift_expression
   27                    | relation_expression LT shift_expression
   28                    | relation_expression GE_OP shift_expression
   29                    | relation_expression LE_OP shift_expression

   30 equal_expression: relation_expression
   31                 | equal_expression EQ_OP relation_expression
   32                 | equal_expression NE_OP relation_expression

   33 bit_expression: equal_expression
   34               | bit_expression AND equal_expression
   35               | bit_expression XOR equal_expression
   36               | bit_expression OR equal_expression

   37 logical_expression: bit_expression
   38                   | logical_expression AND_OP bit_expression
   39                   | logical_expression OR_OP bit_expression

   40 assignment_expression: logical_expression
   41                      | unary_expression ASSIGN assignment_expression

   42 expression: assignment_expression
   43           | expression COMMA assignment_expression

   44 declaration: type_define init_declaration_list SEMICOLON

   45 init_declaration_list: init_declaration
   46                      | init_declaration_list COMMA init_declaration

   47 init_declaration: identifier
   48                 | identifier ASSIGN assignment_expression

   49 type_define: VOID
   50            | CHAR
   51            | INT
   52            | BOOL

   53 identifier: ID

   54 constant_val: NUM
   55             | CONSTCHAR
   56             | TRUE
   57             | FALSE

   58 statement: compound_statement
   59          | expression_statement
   60          | condition_statement
   61          | loop_statement
   62          | jump_statement
   63          | input_statement
   64          | print_statement
   65          | declaration

   66 compound_statement: LBRACE RBRACE
   67                   | LBRACE statement_list RBRACE

   68 statement_list: statement
   69               | statement_list statement

   70 expression_statement: SEMICOLON
   71                     | expression SEMICOLON

   72 condition_statement: IF LPAREN expression RPAREN statement
   73                    | IF LPAREN expression RPAREN statement ELSE statement

   74 loop_statement: WHILE LPAREN expression RPAREN statement
   75               | DO statement WHILE LPAREN expression RPAREN SEMICOLON
   76               | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   77               | FOR LPAREN declaration expression_statement expression RPAREN statement

   78 jump_statement: CONTINUE SEMICOLON
   79               | BREAK SEMICOLON
   80               | RETURN SEMICOLON
   81               | RETURN expression SEMICOLON

   82 input_statement: INPUT LPAREN identifier RPAREN

   83 print_statement: PRINT LPAREN expression RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256)
BOOL (258) 52
BREAK (259) 79
CASE (260)
CHAR (261) 50
CONTINUE (262) 78
DEFAULT (263)
DO (264) 75
ELSE (265) 73
FOR (266) 76 77
IF (267) 72 73
INT (268) 51
RETURN (269) 80 81
SWITCH (270)
VOID (271) 49
INPUT (272) 82
PRINT (273) 83
WHILE (274) 74 75
MAIN (275) 1
TRUE (276) 56
FALSE (277) 57
ID (278) 53
CONSTCHAR (279) 55
NUM (280) 54
RIGHT_OP (281) 24
LEFT_OP (282) 23
AND_OP (283) 38
OR_OP (284) 39
LE_OP (285) 29
GE_OP (286) 28
EQ_OP (287) 31
NE_OP (288) 32
ADD (289) 11 20
SUB (290) 12 21
MUL (291) 16
DIV (292) 17
MOD (293) 18
LT (294) 27
GT (295) 26
AND (296) 34
XOR (297) 35
OR (298) 36
INC_OP (299) 6 9
DEC_OP (300) 7 10
NOT (301) 14
TLIDE (302) 13
SEMICOLON (303) 44 70 71 75 78 79 80 81
LBRACE (304) 66 67
RBRACE (305) 66 67
LBRACKET (306)
RBRACKET (307)
COMMA (308) 43 46
COLON (309)
ASSIGN (310) 41 48
LPAREN (311) 1 4 72 73 74 75 76 77 82 83
RPAREN (312) 1 4 72 73 74 75 76 77 82 83
QUESTION (313)
IFX (314)


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
program (61)
    on left: 1, on right: 0
primary_expression (62)
    on left: 2 3 4, on right: 5
postfix_expression (63)
    on left: 5 6 7, on right: 6 7 8 9 10 11 12 13 14
unary_expression (64)
    on left: 8 9 10 11 12 13 14, on right: 15 16 17 18 41
multipy_expression (65)
    on left: 15 16 17 18, on right: 16 17 18 19 20 21
additive_expression (66)
    on left: 19 20 21, on right: 20 21 22 23 24
shift_expression (67)
    on left: 22 23 24, on right: 23 24 25 26 27 28 29
relation_expression (68)
    on left: 25 26 27 28 29, on right: 26 27 28 29 30 31 32
equal_expression (69)
    on left: 30 31 32, on right: 31 32 33 34 35 36
bit_expression (70)
    on left: 33 34 35 36, on right: 34 35 36 37 38 39
logical_expression (71)
    on left: 37 38 39, on right: 38 39 40
assignment_expression (72)
    on left: 40 41, on right: 41 42 43 48
expression (73)
    on left: 42 43, on right: 4 43 71 72 73 74 75 76 77 81 83
declaration (74)
    on left: 44, on right: 65 77
init_declaration_list (75)
    on left: 45 46, on right: 44 46
init_declaration (76)
    on left: 47 48, on right: 45 46
type_define (77)
    on left: 49 50 51 52, on right: 44
identifier (78)
    on left: 53, on right: 2 47 48 82
constant_val (79)
    on left: 54 55 56 57, on right: 3
statement (80)
    on left: 58 59 60 61 62 63 64 65, on right: 68 69 72 73 74 75 76
    77
compound_statement (81)
    on left: 66 67, on right: 1 58
statement_list (82)
    on left: 68 69, on right: 67 69
expression_statement (83)
    on left: 70 71, on right: 59 76 77
condition_statement (84)
    on left: 72 73, on right: 60
loop_statement (85)
    on left: 74 75 76 77, on right: 61
jump_statement (86)
    on left: 78 79 80 81, on right: 62
input_statement (87)
    on left: 82, on right: 63
print_statement (88)
    on left: 83, on right: 64


State 0

    0 $accept: . program $end

    MAIN  shift, and go to state 1

    program  go to state 2


State 1

    1 program: MAIN . LPAREN RPAREN compound_statement

    LPAREN  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: MAIN LPAREN . RPAREN compound_statement

    RPAREN  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: MAIN LPAREN RPAREN . compound_statement

    LBRACE  shift, and go to state 6

    compound_statement  go to state 7


State 6

   66 compound_statement: LBRACE . RBRACE
   67                   | LBRACE . statement_list RBRACE

    BOOL       shift, and go to state 8
    BREAK      shift, and go to state 9
    CHAR       shift, and go to state 10
    CONTINUE   shift, and go to state 11
    DO         shift, and go to state 12
    FOR        shift, and go to state 13
    IF         shift, and go to state 14
    INT        shift, and go to state 15
    RETURN     shift, and go to state 16
    VOID       shift, and go to state 17
    INPUT      shift, and go to state 18
    PRINT      shift, and go to state 19
    WHILE      shift, and go to state 20
    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    SEMICOLON  shift, and go to state 32
    LBRACE     shift, and go to state 6
    RBRACE     shift, and go to state 33
    LPAREN     shift, and go to state 34

    primary_expression     go to state 35
    postfix_expression     go to state 36
    unary_expression       go to state 37
    multipy_expression     go to state 38
    additive_expression    go to state 39
    shift_expression       go to state 40
    relation_expression    go to state 41
    equal_expression       go to state 42
    bit_expression         go to state 43
    logical_expression     go to state 44
    assignment_expression  go to state 45
    expression             go to state 46
    declaration            go to state 47
    type_define            go to state 48
    identifier             go to state 49
    constant_val           go to state 50
    statement              go to state 51
    compound_statement     go to state 52
    statement_list         go to state 53
    expression_statement   go to state 54
    condition_statement    go to state 55
    loop_statement         go to state 56
    jump_statement         go to state 57
    input_statement        go to state 58
    print_statement        go to state 59


State 7

    1 program: MAIN LPAREN RPAREN compound_statement .

    $default  reduce using rule 1 (program)


State 8

   52 type_define: BOOL .

    $default  reduce using rule 52 (type_define)


State 9

   79 jump_statement: BREAK . SEMICOLON

    SEMICOLON  shift, and go to state 60


State 10

   50 type_define: CHAR .

    $default  reduce using rule 50 (type_define)


State 11

   78 jump_statement: CONTINUE . SEMICOLON

    SEMICOLON  shift, and go to state 61


State 12

   75 loop_statement: DO . statement WHILE LPAREN expression RPAREN SEMICOLON

    BOOL       shift, and go to state 8
    BREAK      shift, and go to state 9
    CHAR       shift, and go to state 10
    CONTINUE   shift, and go to state 11
    DO         shift, and go to state 12
    FOR        shift, and go to state 13
    IF         shift, and go to state 14
    INT        shift, and go to state 15
    RETURN     shift, and go to state 16
    VOID       shift, and go to state 17
    INPUT      shift, and go to state 18
    PRINT      shift, and go to state 19
    WHILE      shift, and go to state 20
    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    SEMICOLON  shift, and go to state 32
    LBRACE     shift, and go to state 6
    LPAREN     shift, and go to state 34

    primary_expression     go to state 35
    postfix_expression     go to state 36
    unary_expression       go to state 37
    multipy_expression     go to state 38
    additive_expression    go to state 39
    shift_expression       go to state 40
    relation_expression    go to state 41
    equal_expression       go to state 42
    bit_expression         go to state 43
    logical_expression     go to state 44
    assignment_expression  go to state 45
    expression             go to state 46
    declaration            go to state 47
    type_define            go to state 48
    identifier             go to state 49
    constant_val           go to state 50
    statement              go to state 62
    compound_statement     go to state 52
    expression_statement   go to state 54
    condition_statement    go to state 55
    loop_statement         go to state 56
    jump_statement         go to state 57
    input_statement        go to state 58
    print_statement        go to state 59


State 13

   76 loop_statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement
   77               | FOR . LPAREN declaration expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 63


State 14

   72 condition_statement: IF . LPAREN expression RPAREN statement
   73                    | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 64


State 15

   51 type_define: INT .

    $default  reduce using rule 51 (type_define)


State 16

   80 jump_statement: RETURN . SEMICOLON
   81               | RETURN . expression SEMICOLON

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    SEMICOLON  shift, and go to state 65
    LPAREN     shift, and go to state 34

    primary_expression     go to state 35
    postfix_expression     go to state 36
    unary_expression       go to state 37
    multipy_expression     go to state 38
    additive_expression    go to state 39
    shift_expression       go to state 40
    relation_expression    go to state 41
    equal_expression       go to state 42
    bit_expression         go to state 43
    logical_expression     go to state 44
    assignment_expression  go to state 45
    expression             go to state 66
    identifier             go to state 49
    constant_val           go to state 50


State 17

   49 type_define: VOID .

    $default  reduce using rule 49 (type_define)


State 18

   82 input_statement: INPUT . LPAREN identifier RPAREN

    LPAREN  shift, and go to state 67


State 19

   83 print_statement: PRINT . LPAREN expression RPAREN

    LPAREN  shift, and go to state 68


State 20

   74 loop_statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 69


State 21

   56 constant_val: TRUE .

    $default  reduce using rule 56 (constant_val)


State 22

   57 constant_val: FALSE .

    $default  reduce using rule 57 (constant_val)


State 23

   53 identifier: ID .

    $default  reduce using rule 53 (identifier)


State 24

   55 constant_val: CONSTCHAR .

    $default  reduce using rule 55 (constant_val)


State 25

   54 constant_val: NUM .

    $default  reduce using rule 54 (constant_val)


State 26

   11 unary_expression: ADD . postfix_expression

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    LPAREN     shift, and go to state 34

    primary_expression  go to state 35
    postfix_expression  go to state 70
    identifier          go to state 49
    constant_val        go to state 50


State 27

   12 unary_expression: SUB . postfix_expression

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    LPAREN     shift, and go to state 34

    primary_expression  go to state 35
    postfix_expression  go to state 71
    identifier          go to state 49
    constant_val        go to state 50


State 28

    9 unary_expression: INC_OP . postfix_expression

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    LPAREN     shift, and go to state 34

    primary_expression  go to state 35
    postfix_expression  go to state 72
    identifier          go to state 49
    constant_val        go to state 50


State 29

   10 unary_expression: DEC_OP . postfix_expression

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    LPAREN     shift, and go to state 34

    primary_expression  go to state 35
    postfix_expression  go to state 73
    identifier          go to state 49
    constant_val        go to state 50


State 30

   14 unary_expression: NOT . postfix_expression

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    LPAREN     shift, and go to state 34

    primary_expression  go to state 35
    postfix_expression  go to state 74
    identifier          go to state 49
    constant_val        go to state 50


State 31

   13 unary_expression: TLIDE . postfix_expression

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    LPAREN     shift, and go to state 34

    primary_expression  go to state 35
    postfix_expression  go to state 75
    identifier          go to state 49
    constant_val        go to state 50


State 32

   70 expression_statement: SEMICOLON .

    $default  reduce using rule 70 (expression_statement)


State 33

   66 compound_statement: LBRACE RBRACE .

    $default  reduce using rule 66 (compound_statement)


State 34

    4 primary_expression: LPAREN . expression RPAREN

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    LPAREN     shift, and go to state 34

    primary_expression     go to state 35
    postfix_expression     go to state 36
    unary_expression       go to state 37
    multipy_expression     go to state 38
    additive_expression    go to state 39
    shift_expression       go to state 40
    relation_expression    go to state 41
    equal_expression       go to state 42
    bit_expression         go to state 43
    logical_expression     go to state 44
    assignment_expression  go to state 45
    expression             go to state 76
    identifier             go to state 49
    constant_val           go to state 50


State 35

    5 postfix_expression: primary_expression .

    $default  reduce using rule 5 (postfix_expression)


State 36

    6 postfix_expression: postfix_expression . INC_OP
    7                   | postfix_expression . DEC_OP
    8 unary_expression: postfix_expression .

    INC_OP  shift, and go to state 77
    DEC_OP  shift, and go to state 78

    $default  reduce using rule 8 (unary_expression)


State 37

   15 multipy_expression: unary_expression .
   41 assignment_expression: unary_expression . ASSIGN assignment_expression

    ASSIGN  shift, and go to state 79

    $default  reduce using rule 15 (multipy_expression)


State 38

   16 multipy_expression: multipy_expression . MUL unary_expression
   17                   | multipy_expression . DIV unary_expression
   18                   | multipy_expression . MOD unary_expression
   19 additive_expression: multipy_expression .

    MUL  shift, and go to state 80
    DIV  shift, and go to state 81
    MOD  shift, and go to state 82

    $default  reduce using rule 19 (additive_expression)


State 39

   20 additive_expression: additive_expression . ADD multipy_expression
   21                    | additive_expression . SUB multipy_expression
   22 shift_expression: additive_expression .

    ADD  shift, and go to state 83
    SUB  shift, and go to state 84

    $default  reduce using rule 22 (shift_expression)


State 40

   23 shift_expression: shift_expression . LEFT_OP additive_expression
   24                 | shift_expression . RIGHT_OP additive_expression
   25 relation_expression: shift_expression .

    RIGHT_OP  shift, and go to state 85
    LEFT_OP   shift, and go to state 86

    $default  reduce using rule 25 (relation_expression)


State 41

   26 relation_expression: relation_expression . GT shift_expression
   27                    | relation_expression . LT shift_expression
   28                    | relation_expression . GE_OP shift_expression
   29                    | relation_expression . LE_OP shift_expression
   30 equal_expression: relation_expression .

    LE_OP  shift, and go to state 87
    GE_OP  shift, and go to state 88
    LT     shift, and go to state 89
    GT     shift, and go to state 90

    $default  reduce using rule 30 (equal_expression)


State 42

   31 equal_expression: equal_expression . EQ_OP relation_expression
   32                 | equal_expression . NE_OP relation_expression
   33 bit_expression: equal_expression .

    EQ_OP  shift, and go to state 91
    NE_OP  shift, and go to state 92

    $default  reduce using rule 33 (bit_expression)


State 43

   34 bit_expression: bit_expression . AND equal_expression
   35               | bit_expression . XOR equal_expression
   36               | bit_expression . OR equal_expression
   37 logical_expression: bit_expression .

    AND  shift, and go to state 93
    XOR  shift, and go to state 94
    OR   shift, and go to state 95

    $default  reduce using rule 37 (logical_expression)


State 44

   38 logical_expression: logical_expression . AND_OP bit_expression
   39                   | logical_expression . OR_OP bit_expression
   40 assignment_expression: logical_expression .

    AND_OP  shift, and go to state 96
    OR_OP   shift, and go to state 97

    $default  reduce using rule 40 (assignment_expression)


State 45

   42 expression: assignment_expression .

    $default  reduce using rule 42 (expression)


State 46

   43 expression: expression . COMMA assignment_expression
   71 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 98
    COMMA      shift, and go to state 99


State 47

   65 statement: declaration .

    $default  reduce using rule 65 (statement)


State 48

   44 declaration: type_define . init_declaration_list SEMICOLON

    ID  shift, and go to state 23

    init_declaration_list  go to state 100
    init_declaration       go to state 101
    identifier             go to state 102


State 49

    2 primary_expression: identifier .

    $default  reduce using rule 2 (primary_expression)


State 50

    3 primary_expression: constant_val .

    $default  reduce using rule 3 (primary_expression)


State 51

   68 statement_list: statement .

    $default  reduce using rule 68 (statement_list)


State 52

   58 statement: compound_statement .

    $default  reduce using rule 58 (statement)


State 53

   67 compound_statement: LBRACE statement_list . RBRACE
   69 statement_list: statement_list . statement

    BOOL       shift, and go to state 8
    BREAK      shift, and go to state 9
    CHAR       shift, and go to state 10
    CONTINUE   shift, and go to state 11
    DO         shift, and go to state 12
    FOR        shift, and go to state 13
    IF         shift, and go to state 14
    INT        shift, and go to state 15
    RETURN     shift, and go to state 16
    VOID       shift, and go to state 17
    INPUT      shift, and go to state 18
    PRINT      shift, and go to state 19
    WHILE      shift, and go to state 20
    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    SEMICOLON  shift, and go to state 32
    LBRACE     shift, and go to state 6
    RBRACE     shift, and go to state 103
    LPAREN     shift, and go to state 34

    primary_expression     go to state 35
    postfix_expression     go to state 36
    unary_expression       go to state 37
    multipy_expression     go to state 38
    additive_expression    go to state 39
    shift_expression       go to state 40
    relation_expression    go to state 41
    equal_expression       go to state 42
    bit_expression         go to state 43
    logical_expression     go to state 44
    assignment_expression  go to state 45
    expression             go to state 46
    declaration            go to state 47
    type_define            go to state 48
    identifier             go to state 49
    constant_val           go to state 50
    statement              go to state 104
    compound_statement     go to state 52
    expression_statement   go to state 54
    condition_statement    go to state 55
    loop_statement         go to state 56
    jump_statement         go to state 57
    input_statement        go to state 58
    print_statement        go to state 59


State 54

   59 statement: expression_statement .

    $default  reduce using rule 59 (statement)


State 55

   60 statement: condition_statement .

    $default  reduce using rule 60 (statement)


State 56

   61 statement: loop_statement .

    $default  reduce using rule 61 (statement)


State 57

   62 statement: jump_statement .

    $default  reduce using rule 62 (statement)


State 58

   63 statement: input_statement .

    $default  reduce using rule 63 (statement)


State 59

   64 statement: print_statement .

    $default  reduce using rule 64 (statement)


State 60

   79 jump_statement: BREAK SEMICOLON .

    $default  reduce using rule 79 (jump_statement)


State 61

   78 jump_statement: CONTINUE SEMICOLON .

    $default  reduce using rule 78 (jump_statement)


State 62

   75 loop_statement: DO statement . WHILE LPAREN expression RPAREN SEMICOLON

    WHILE  shift, and go to state 105


State 63

   76 loop_statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement
   77               | FOR LPAREN . declaration expression_statement expression RPAREN statement

    BOOL       shift, and go to state 8
    CHAR       shift, and go to state 10
    INT        shift, and go to state 15
    VOID       shift, and go to state 17
    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    SEMICOLON  shift, and go to state 32
    LPAREN     shift, and go to state 34

    primary_expression     go to state 35
    postfix_expression     go to state 36
    unary_expression       go to state 37
    multipy_expression     go to state 38
    additive_expression    go to state 39
    shift_expression       go to state 40
    relation_expression    go to state 41
    equal_expression       go to state 42
    bit_expression         go to state 43
    logical_expression     go to state 44
    assignment_expression  go to state 45
    expression             go to state 46
    declaration            go to state 106
    type_define            go to state 48
    identifier             go to state 49
    constant_val           go to state 50
    expression_statement   go to state 107


State 64

   72 condition_statement: IF LPAREN . expression RPAREN statement
   73                    | IF LPAREN . expression RPAREN statement ELSE statement

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    LPAREN     shift, and go to state 34

    primary_expression     go to state 35
    postfix_expression     go to state 36
    unary_expression       go to state 37
    multipy_expression     go to state 38
    additive_expression    go to state 39
    shift_expression       go to state 40
    relation_expression    go to state 41
    equal_expression       go to state 42
    bit_expression         go to state 43
    logical_expression     go to state 44
    assignment_expression  go to state 45
    expression             go to state 108
    identifier             go to state 49
    constant_val           go to state 50


State 65

   80 jump_statement: RETURN SEMICOLON .

    $default  reduce using rule 80 (jump_statement)


State 66

   43 expression: expression . COMMA assignment_expression
   81 jump_statement: RETURN expression . SEMICOLON

    SEMICOLON  shift, and go to state 109
    COMMA      shift, and go to state 99


State 67

   82 input_statement: INPUT LPAREN . identifier RPAREN

    ID  shift, and go to state 23

    identifier  go to state 110


State 68

   83 print_statement: PRINT LPAREN . expression RPAREN

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    LPAREN     shift, and go to state 34

    primary_expression     go to state 35
    postfix_expression     go to state 36
    unary_expression       go to state 37
    multipy_expression     go to state 38
    additive_expression    go to state 39
    shift_expression       go to state 40
    relation_expression    go to state 41
    equal_expression       go to state 42
    bit_expression         go to state 43
    logical_expression     go to state 44
    assignment_expression  go to state 45
    expression             go to state 111
    identifier             go to state 49
    constant_val           go to state 50


State 69

   74 loop_statement: WHILE LPAREN . expression RPAREN statement

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    LPAREN     shift, and go to state 34

    primary_expression     go to state 35
    postfix_expression     go to state 36
    unary_expression       go to state 37
    multipy_expression     go to state 38
    additive_expression    go to state 39
    shift_expression       go to state 40
    relation_expression    go to state 41
    equal_expression       go to state 42
    bit_expression         go to state 43
    logical_expression     go to state 44
    assignment_expression  go to state 45
    expression             go to state 112
    identifier             go to state 49
    constant_val           go to state 50


State 70

    6 postfix_expression: postfix_expression . INC_OP
    7                   | postfix_expression . DEC_OP
   11 unary_expression: ADD postfix_expression .

    INC_OP  shift, and go to state 77
    DEC_OP  shift, and go to state 78

    $default  reduce using rule 11 (unary_expression)


State 71

    6 postfix_expression: postfix_expression . INC_OP
    7                   | postfix_expression . DEC_OP
   12 unary_expression: SUB postfix_expression .

    INC_OP  shift, and go to state 77
    DEC_OP  shift, and go to state 78

    $default  reduce using rule 12 (unary_expression)


State 72

    6 postfix_expression: postfix_expression . INC_OP
    7                   | postfix_expression . DEC_OP
    9 unary_expression: INC_OP postfix_expression .

    INC_OP  shift, and go to state 77
    DEC_OP  shift, and go to state 78

    $default  reduce using rule 9 (unary_expression)


State 73

    6 postfix_expression: postfix_expression . INC_OP
    7                   | postfix_expression . DEC_OP
   10 unary_expression: DEC_OP postfix_expression .

    INC_OP  shift, and go to state 77
    DEC_OP  shift, and go to state 78

    $default  reduce using rule 10 (unary_expression)


State 74

    6 postfix_expression: postfix_expression . INC_OP
    7                   | postfix_expression . DEC_OP
   14 unary_expression: NOT postfix_expression .

    INC_OP  shift, and go to state 77
    DEC_OP  shift, and go to state 78

    $default  reduce using rule 14 (unary_expression)


State 75

    6 postfix_expression: postfix_expression . INC_OP
    7                   | postfix_expression . DEC_OP
   13 unary_expression: TLIDE postfix_expression .

    INC_OP  shift, and go to state 77
    DEC_OP  shift, and go to state 78

    $default  reduce using rule 13 (unary_expression)


State 76

    4 primary_expression: LPAREN expression . RPAREN
   43 expression: expression . COMMA assignment_expression

    COMMA   shift, and go to state 99
    RPAREN  shift, and go to state 113


State 77

    6 postfix_expression: postfix_expression INC_OP .

    $default  reduce using rule 6 (postfix_expression)


State 78

    7 postfix_expression: postfix_expression DEC_OP .

    $default  reduce using rule 7 (postfix_expression)


State 79

   41 assignment_expression: unary_expression ASSIGN . assignment_expression

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    LPAREN     shift, and go to state 34

    primary_expression     go to state 35
    postfix_expression     go to state 36
    unary_expression       go to state 37
    multipy_expression     go to state 38
    additive_expression    go to state 39
    shift_expression       go to state 40
    relation_expression    go to state 41
    equal_expression       go to state 42
    bit_expression         go to state 43
    logical_expression     go to state 44
    assignment_expression  go to state 114
    identifier             go to state 49
    constant_val           go to state 50


State 80

   16 multipy_expression: multipy_expression MUL . unary_expression

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    LPAREN     shift, and go to state 34

    primary_expression  go to state 35
    postfix_expression  go to state 36
    unary_expression    go to state 115
    identifier          go to state 49
    constant_val        go to state 50


State 81

   17 multipy_expression: multipy_expression DIV . unary_expression

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    LPAREN     shift, and go to state 34

    primary_expression  go to state 35
    postfix_expression  go to state 36
    unary_expression    go to state 116
    identifier          go to state 49
    constant_val        go to state 50


State 82

   18 multipy_expression: multipy_expression MOD . unary_expression

    TRUE       shift, and go to state 21
    FALSE      shift, and go to state 22
    ID         shift, and go to state 23
    CONSTCHAR  shift, and go to state 24
    NUM        shift, and go to state 25
    ADD        shift, and go to state 26
    SUB        shift, and go to state 27
    INC_OP     shift, and go to state 28
    DEC_OP     shift, and go to state 29
    NOT        shift, and go to state 30
    TLIDE      shift, and go to state 31
    LPAREN     shift, and go to state 34

    primary_expression  go to state 35
    postfix_expression  go to state 36
    unary_expression    go to state 117
    identifier          go to state 49
    constant_val        go to state 50


State 83

   20 additive_expression: additive_expression ADD . multipy_expression
